--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ header {
 header h1 {
   color: #ffffff;
 }
-
+header p {
+  color: #cbd5e1;
+}
 nav a {
   color: #cbd5e1;
   text-decoration: none;
