--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ header {
   color: #ffffff;
   padding: 20px;
   text-align: center;
-header h1 
-  color: #B0C4DE;
+<h1>
+  coolor: #B0C4DE
 }
 
 
