--- a/style.css
+++ b/style.css
@@ -12,32 +12,26 @@ header {
   padding: 20px;
   text-align: center;
 }
-</h1> {
-  coolor: #B0C4DE
+header h1 {
+  color: #ffffff;
 }
-
-
 nav a {
   color: #cbd5e1;
   text-decoration: none;
   margin: 0 10px;
   font-weight: bold;
 }
-
 nav a:hover {
   color: #ffffff;
 }
-
 section {
   max-width: 800px;
   margin: 40px auto;
   padding: 0 20px;
 }
-
 h1, h2 {
   color: #0f172a;
 }
-
 footer {
   text-align: center;
   padding: 20px;
