--- a/style.css
+++ b/style.css
@@ -38,15 +38,15 @@ section {
 }
 
 header h1 {
-  color: #000000;
+  color: #ffffff;
 }
 
 header p {
-  color: #00ffff;
+  color: #cbd5e1;
 }
 
 section h2 {
-  color: #008B8B;
+  color: #0f172a;
 }
 
 footer {
