--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   background-color: #f4f6f8;
   color: #222;
   margin: 0;
   padding: 0;
+}
+
+h1, h2 {
+  font-family: 'Poppins', Arial, sans-serif;
 }
 
 header {
