--- a/style.css
+++ b/style.css
@@ -82,3 +82,17 @@ section {
   margin: 60px auto;
   padding: 0 20px;
 }
+
+section:nth-child(even) {
+  background-color: #f1f5f9;
+  padding: 40px 20px;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+p, ul {
+  margin-top: 0;
+  line-height: 1.6;
+}
